# Ares

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  run.py
.github/workflows/: deploy.yaml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py
backend/app/api/v1/: dashboard.py  exploits.py  reports.py  router.py  scan_configs.py  scans.py  targets.py  vulnerabilities.py  ws.py
backend/app/models/: __init__.py  report.py  scan.py  scan_config.py  target.py  vulnerability.py
backend/app/scanners/: __init__.py  api_security_scanner.py  base.py  credential_tester.py  llm_security_scanner.py  manager.py  network_scanner.py  registry.py  ssl_analyzer.py  web_vuln_scanner.py
backend/app/schemas/: exploit.py  report.py  scan.py  scan_config.py  target.py  vulnerability.py
backend/app/services/: report_service.py  scan_service.py  ws_manager.py
backend/app/templates/reports/: report.html.j2
backend/data/wordlists/: default_credentials.json
docs/: architecture.md
docs/research/: tools_analysis.md  vulnerability_research.md
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/environments/: environment.ts
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml
(+30 files in other folders)
